--- a/Stilo.css
+++ b/Stilo.css
@@ -44,7 +44,7 @@
         margin-left: 30px;
       }
 
-      footer {
+      .conteiner4 {
         background-color: #000003;
         color: aliceblue;
         position: relative;
